551 ==> 335870 - Nexus 4 in PTP mode gets error: The specified camera ("/org/kde/solid/udev/...") is not supported.
552 ==> 399917 - Fails to build with QT5.7.1
553 ==> 399762 - digiKam Geolocation Correlator ignores time offset.
554 ==> 400148 - Files exported in google photos does not have their filename as name, but their date.
555 ==> 373678 - Videos exported in google photos are not available (still processing state).
556 ==> 400139 - Titles are not exported anymore on google photos.
557 ==> 400216 - Components Information window: no standardized uppercase/lowercase.
558 ==> 400217 - Incorrect Video date/time information: shifted by 2 hours.
559 ==> 396961 - Empty space on interface on thumbnail view.
560 ==> 400436 - Crash when saving jpeg files with metadata.
561 ==> 400492 - Rotation does not work.
562 ==> 246727 - Add undo functionality to move to trash action.
563 ==> 400637 - IPFS icons have non-square size, causing them to get blurred.
564 ==> 400434 - Trash content disappears after selecting 'Map' or 'Table' view.
565 ==> 394660 - Crashes when refreshing.
566 ==> 400712 - File modification timestamp is updated when images are moved to collection on removable media.
567 ==> 394214 - Import .mp4 files does not preserve file mtime as date stamp.
568 ==> 400762 - Trash - "Delete All Permanently" button not visible.
569 ==> 400792 - Failure to export to JPEG 2000.
570 ==> 400777 - Group images by timelapse / burst [patch].
571 ==> 400902 - NAS Mysql cannot connect with instructions given by Dmitry Popov.
572 ==> 400918 - Tags are erroneously copied to untagged images in a selection when new tag added.
573 ==> 375197 - It is possible to rotate video thumbnails (but the video isn't rotated).
574 ==> 334678 - Thumbnails fail to generate for certain AVI files - infinite loop.
575 ==> 400917 - Rotation of picture in Preview mode: thumbnail not rotated.
576 ==> 400960 - Do not reset horizontal scroll bar slider position when selecting album.
577 ==> 