@@ -641,4 +641,5 @@ BUGFIXES:
 574 ==> 334678 - Thumbnails fail to generate for certain AVI files - infinite loop.
 575 ==> 400917 - Rotation of picture in Preview mode: thumbnail not rotated.
 576 ==> 400960 - Do not reset horizontal scroll bar slider position when selecting album.
-577 ==> 
+577 ==> 400766 - Export to Onedrive: not possible to export into subfolder.
+578 ==> 
